# generative-agents

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: synthetic_10.json  synthetic_100.json  synthetic_25.json  synthetic_5.json  synthetic_50.json  valentine_party.json
data/love_island/: persons_cz.json  persons_en.json  results.json
experiments/: abbl_study_1_experiment.py  abbl_study_1_results.ipynb  abbl_study_2_experiment.py  abbl_study_2_results.ipynb  abbl_study_results.ipynb  abbl_study_utils.py  allb_study_1_experiment.py  chain_info_propagation_test.py  data_generation_utils.py  dictator_game_original_paper_data.csv  game_theory_experiments.py  game_theory_result_analysis.ipynb  game_theory_results.ipynb  information_spread_data.ipynb  logger_utils.py  love_island_experiment.py  love_island_loaders.py  love_island_results.ipynb  social_games.ipynb  synthetic_data_results.ipynb  synthetic_information_spread_experiments.py  valentine_party.py
generative_multiagents/: async_helpers.py  llm_backend.py
results/: A1_baseline_5.json  A2_baseline_5_redprompt.json  A3_simple_no_bdi_5.json  A4_simple_no_bdi_5_red.json  A5_baseline_10.json  A6_baseline_10_redprompt.json  A7_simple_no_bdi_10.json  A8_simple_no_bdi_10_red.json  B1_unitary_5.json  B2_classical_5.json  B3_unitary_10.json  B4_unitary_10.json  B5_classical_10.json  C1_no_bdi_5.json  C2_no_forget_5.json  C3_simple_mem_5.json  C4_no_bdi_10.json  C5_no_forget_10.json  C6_simple_mem_10.json  D10_topstd_2.0_5.json  D11_topk_5_10.json  D12_topk_10_10.json  D13_topk_25_10.json  D14_topk_50_10.json  D15_meanstd_0.5_10.json  D16_meanstd_1.0_10.json  D17_meanstd_2.0_10.json  D18_topstd_0.5_10.json  D19_topstd_1.0_10.json  D1_topk_5_5.json  D20_topstd_2.0_10.json  D2_topk_10_5.json  D3_topk_25_5.json  D4_topk_50_5.json  D5_meanstd_0.5_5.json  D6_meanstd_1.0_5.json  D7_meanstd_2.0_5.json  D8_topstd_0.5_5.json  D9_topstd_1.0_5.json  E10_10e_5u_10.json  (+56 more)
scripts/: something.py  test.ipynb  valentine_party.py
src/generative_agents/: __init__.py  agent.py  async_helpers.py  config.py  conversation_managment.py  llm_backend.py  memory.py  types.py  utils.py
src/generative_agents/memory/: __init__.py  embedding_memory.py  memory_base.py  memory_managers.py  models.py  simple_memory.py
src/generative_multiagents/: agent.py  async_helpers.py  conversation_managment.py  llm_backend.py
tests/: conftest.py  test_async_helpers.py
tests/test_conversation/: test_bfs_frontier_graph.py  test_selectors.py
tests/test_memory/: test_embedding_memory.py  test_memory_managers.py  test_simple_memory.py
